src/js/custom_elements/user_values/user_values.styl
user-values
  display block
  grid-area values
  padding var(--gap)
  place-self var(--values-place-self)

user-values fieldset
  border 0
  opacity 1
  padding 0
  transition opacity var(--transition)

user-values [disabled]
  opacity .3
  pointer-events none

user-values form
  display grid
  gap .75rem
  grid auto-flow / 1fr

// Tweak a few <fieldset> layouts based on their content.
user-values h2
  display flex
  font-size 1rem
  margin-block .5rem

user-values h2 > span
  opacity var(--text-opacity)
  margin-inline auto 0

// Pull 'Sex' heading out of the viewport since its options make this obvious.
user-values [id='sex'] h2
  inset-inline -100vw auto
  position absolute

user-values :is(ul, li)
  align-items center
  display flex
  padding 0

user-values ul
  margin 0

user-values [id='measurements'] ul
  flex-wrap wrap
  gap .75rem

user-values :is(.weight, .age)
  flex 0 0 100%

user-values .feet::before
  content 'Height'
  inline-size var(--label-width)

user-values :is(.weight, .age)::after
  margin-inline .5em 0
  opacity var(--text-opacity)
  pointer-events none

user-values .weight::after
  content 'lbs.'

user-values .age::after
  content 'yrs.'

user-values label
  display flex

user-values label:focus
  outline none

[no-touch] user-values label:hover
  cursor pointer

user-values label:focus > [type] + span
[no-touch] user-values label:hover > [type] + span
  color var(--text-color)
  transform scale(1.1)

user-values [for='feet']
user-values [for='inches']
  margin-block 0
  margin-inline 1rem .5rem
  opacity var(--text-opacity)
  order 2
  text-transform lowercase

user-values :is([for='age'], [for='weight'])
  inline-size var(--label-width)

user-values label > span
  transition color var(--transition), transform var(--transition)

user-values [type='text']
  background var(--fill-3)
  block-size var(--input-height)
  border 2px solid var(--fill-1)
  border-radius 6px
  box-sizing content-box
  color var(--text-color)
  font-size 1em
  inline-size 3rem
  padding-inline .5rem
  text-align end

user-values [type='radio'] + span
  align-items center
  border-radius 2px
  display flex
  inline-size 100%
  justify-content center
  opacity var(--text-opacity)
  pointer-events none

user-values [type='radio']:checked + span
  color var(--text-color)

[no-js] user-values
  display none

